--- a/References/references.bib
+++ b/References/references.bib
@@ -2487,3 +2487,47 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 PMCID: PMC4928286
 PMID: 27358049}
 }
+
+@techreport{dieckmann2021,
+	title = {Reference-Based Versus Reference-Free Cell Type Estimation In DNA Methylation Studies Using Human Placental Tissue},
+	author = {{Dieckmann}, {Linda} and {Cruceanu}, {Cristiana} and {Lahti-Pulkkinen}, {Marius} and {Lahti}, {Jari} and {Kvist}, {Tuomas} and {Laivuori}, {Hannele} and {Sammallahti}, {Sara} and {Villa}, {Pia M.} and {Suomalainen-König}, {Sanna} and {Rancourt}, {Rebecca C.} and {Plagemann}, {Andreas} and {Henrich}, {Wolfgang} and {Eriksson}, {Johan G.} and {Kajantie}, {Eero} and {Entringer}, {Sonja} and {Braun}, {Thorsten} and {Raikkonen}, {Katri} and {Binder}, {Elisabeth B.} and {Czamara}, {Darina}},
+	year = {2021},
+	month = {09},
+	date = {2021-09-09},
+	doi = {10.21203/rs.3.rs-848651/v1},
+	url = {https://www.researchsquare.com/article/rs-848651/v1},
+	note = {DOI: 10.21203/rs.3.rs-848651/v1},
+	langid = {en}
+}
+
+@techreport{andrews2021,
+	title = {Large-scale placenta DNA methylation mega-analysis reveals fetal sex-specific differentially methylated CpG sites and regions},
+	author = {{Andrews}, {Shan V.} and {Yang}, {Irene J.} and {Froehlich}, {Karolin} and {Oskotsky}, {Tomiko} and {Sirota}, {Marina}},
+	year = {2021},
+	month = {03},
+	date = {2021-03-08},
+	pages = {2021.03.04.433985},
+	url = {https://www.biorxiv.org/content/10.1101/2021.03.04.433985v2},
+	note = {Company: Cold Spring Harbor Laboratory
+DOI: 10.1101/2021.03.04.433985
+Distributor: Cold Spring Harbor Laboratory
+Label: Cold Spring Harbor Laboratory
+Section: New Results
+Type: article},
+	langid = {en}
+}
+
+@article{delgobbo2021,
+	title = {Confined placental mosaicism involving multiple de novo copy number variants associated with fetal growth restriction: A case report},
+	author = {{Del Gobbo}, {Giulia F.} and {Yuan}, {Victor} and {Robinson}, {Wendy P.}},
+	year = {2021},
+	date = {2021},
+	journal = {American Journal of Medical Genetics Part A},
+	pages = {1908--1912},
+	volume = {185},
+	number = {6},
+	doi = {10.1002/ajmg.a.62183},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ajmg.a.62183},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajmg.a.62183},
+	langid = {en}
+}
